feat: handle errors and dockerfile
